Migrate from in-memory repositories to Cyoda EntityService
- Add CyodaEntity to 7 DTOs: Project, Suite, TestCase, TestRun,
  TestRunCase, TestRunStep, Attachment (ENTITY_NAME, ENTITY_VERSION,
  MODEL_SPEC constants + getModelKey() implementation)
- Rewrite ProjectService, SuiteService, TestCaseService, TestRunService,
  TestRunCaseService, TestRunStepService, AttachmentService to use
  EntityService instead of in-memory ConcurrentHashMap repositories
- Replace findById/findAll/create/update/delete with EntityService calls
- Use GroupCondition + SimpleCondition for filtering by parent IDs
  (projectId, suiteId, testRunId, testRunCaseId)
- Add withId() helper in each service to populate id from EntityMetadata
- Update ProjectServiceTest, TestCaseServiceTest, TestRunServiceTest
  from @SpringBootTest (hanging on gRPC) to @ExtendWith(MockitoExtension)
  with @Mock EntityService - fast unit tests without network calls
- Update ProjectControllerTest, AuthControllerTest from @SpringBootTest
  to @WebMvcTest with @MockBean services and security auto-config excluded
- All 268 tests passing